Rename Reversi.App and Reversi.Web to Reversi.ConsoleApp and Reversi.WebApp

--- a/Reversi.Web/Views/Home/Index.cshtml
+++ b/Reversi.Web/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using Reversi.Web.BlazorComponents;
+﻿@using Reversi.WebApp.BlazorComponents;
 @using Reversi.Services
 @using Reversi.Services.Interfaces
 @using Microsoft.AspNetCore.Http
