--- a/Reversi.Web/Views/_ViewImports.cshtml
+++ b/Reversi.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,1 @@
-﻿@using Reversi.Web
-@using Reversi.Web.Models
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
