--- a/Reversi.Web/BlazorComponents/GridComponent.razor
+++ b/Reversi.Web/BlazorComponents/GridComponent.razor
@@ -11,7 +11,7 @@
     <div class="flex col-md-5">
         <label><b>Who I am:</b> @WhatColourAmI</label>
         <ScoreComponent/>
-        <WhoIAm UserId="@UserId"/>
+        <WhoIAmComponent UserId="@UserId"/>
         <MessageComponent IsUsersTurn="@IsUsersTurn" />
     </div>
 </CascadingValue>
