--- a/Reversi.Web/Views/Home/Index.cshtml
+++ b/Reversi.Web/Views/Home/Index.cshtml
@@ -30,4 +30,4 @@
 
 <div align="center">@(await Html.RenderComponentAsync<LobbyComponent>(RenderMode.ServerPrerendered, new { userId }))</div>
 @* <div align="center">@(await Html.RenderComponentAsync<GridComponent>(RenderMode.ServerPrerendered, new { userId }))</div> *@
-<div align="center">@(await Html.RenderComponentAsync<Chat>(RenderMode.ServerPrerendered))</div>
+@* <div align="center">@(await Html.RenderComponentAsync<Chat>(RenderMode.ServerPrerendered))</div> *@
