WIP: Moved Room.cshtml to Pages folder and created links in Lobby (neither working)

--- a/Reversi.Web/Pages/Room.cshtml
+++ b/Reversi.Web/Pages/Room.cshtml
@@ -1,7 +1,9 @@
 ﻿@page
-@model Reversi.WebApp.Views.Room.RoomModel
+@model Reversi.WebApp.Pages.RoomModel
 @{
 }
+
+<h1>Room!!</h1>
 
 <div class="flex col-md-5">
     <RoomComponent UserId="@Model.UserId" />
