--- a/Reversi.Web/BlazorComponents/LobbyComponent.razor
+++ b/Reversi.Web/BlazorComponents/LobbyComponent.razor
@@ -1,6 +1,10 @@
 ﻿<h3>Lobby</h3>
 <div>Welcome to the Lobby, User '@UserId'</div>
 
+<a href="Pages/Room?UserId=@UserId">Go to Room</a>
+<br />
+<a href="Room?UserId=@UserId">Go to Room2</a>
+
 @code {
     [Parameter]
     public string UserId { get; set; }
